# ENPM-662-Introduction-to-Robot-Modelling

./: .gitignore  .readthedocs.yaml  error.md  readme.md
car/: CMakeLists.txt  package.xml
car/scripts/: key_board.py
car/urdf/: robotaxi.urdf.xacro
docs/: add_control.rst  add_urdf.rst  competition_setup.rst  conf.py  custom_objects.rst  env_setup.rst  faq.rst  index.rst  install.rst  install_ros2.rst  install_ubuntu.rst  package_creation.rst  plugin.rst  requirements.txt  rviz.rst  script.rst  solidworks.rst  support.rst  workspace.rst  world.rst
docs/_build/doctrees/: add_control.doctree  add_urdf.doctree  env_setup.doctree  environment.pickle  index.doctree  install.doctree  install_ros2.doctree  install_ubuntu.doctree  package_creation.doctree  script.doctree  support.doctree  workspace.doctree
docs/_build/doctrees/source/: index.doctree  install.doctree  support.doctree
docs/_build/html/: .buildinfo  add_control.html  add_urdf.html  env_setup.html  genindex.html  index.html  install.html  install_ros2.html  install_ubuntu.html  objects.inv  package_creation.html  script.html  search.html  searchindex.js  support.html  workspace.html
docs/_build/html/_sources/: add_urdf.rst.txt  index.rst.txt  install_ros2.rst.txt  install_ubuntu.rst.txt  package_creation.rst.txt  workspace.rst.txt
templates/config/: control.yaml
templates/launch/: gazebo.launch.py  spawn_robot_ros2.launch.py
templates/plugin/drone_plugin/: CMakeLists.txt  package.xml  test.messgae
templates/plugin/drone_plugin/include/drone_plugin/: drone_plugin_.hpp
templates/plugin/drone_plugin/msg/: MotorSpeed.msg
templates/plugin/drone_plugin/scripts/: minimal_publsiher.py
templates/plugin/drone_plugin/src/: drone_plugin_.cpp
templates/template2/launch/: debug.launch.py  display.launch.py  spawn_robot_ros2.launch.py
templates/template3/launch/: competiton.launch.py
templates/template4/: competition.launch.py
